dts/testData/inspections/propertyName/MultipleAt.dtsi
<error descr="Multiple \"@\" characters in node name">name@@10</error> {};

name@10 {};